--- a/index.html
+++ b/index.html
@@ -108,33 +108,136 @@
     </header>
 
 
-    <main>
+    <main class="container-fluid main2">
 
 
-        <!-- <section class="row section1">
-            <div class="col">
 
-                <div class="iframe3">             
-                       <div class="iFrame2">
-                    <iframe src="indexCables1.html" class="iFrame"></iframe>
-                </div></div>
-                <div class="col parrafo1">
-                    <p>oaisjhfdiasf</p>
+
+        <section class="row arteZ">
+
+            <div class="col d-flex justify-content-center align-items-center">
+                <div>
+                    <h1>ARTE</h1>
+                    <p>
+                        A traves de la programacion encuentro plasmar mis visiones e ideas
+                    </p>
+                    <div>
+                        <a href="./pages/arte.html">Ver Mas</a>
+                    </div>
                 </div>
 
 
             </div>
+            <div class="col">
+                <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel">
+                    <div class="carousel-inner ">
+                        <div class="carousel-item active">
+                            <img src="./img/zetaalphalogo2.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item ">
+                            <img src="./img/zetaalphalogo2.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item ">
+                            <img src="./img/zetaalphalogo2.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
 
 
-        </section> -->
+        </section>
 
+        <section>
+            <div class="iFrame2">
+                <iframe src="indexCables1.html" class="iFrame"></iframe>
+            </div>
+
+
+        </section>
+
+        <section class="row arteZ tiendaZ">
+
+
+            <div class="card-group">
+                <div class="card">
+                    <img class="card-img-top" src="./img/zetaalphalogo2.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">CUADROS</h5>
+                        <p class="card-text">Creados para la relajacion y alteracion de la consciencia</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="./pages/tienda.html#cuadros">Ver Mas</a>
+                    </div>
+                </div>
+                <div class="col d-flex flex-wrap justify-content-center align-items-center tiendaText">
+
+                    <h1>TIENDA</h1>
+                    <p>Explora todos los productos y regalate alegria</p>
+                </div>
+
+                <div class="card">
+                    <img class="card-img-top" src="./img/zetaalphalogo2.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">JOYAS</h5>
+                        <p class="card-text">Diseños de Autor, Colecciones !</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="./pages/tienda.html#joyas">Ver Mas</a>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+
+        <section class="row contactoZ1 ">
+
+            <div class="col">
+                <div class="contactoZ">
+                    <h2>CONTACTO</h2>
+                    <p>Para diseños personalizados pueden comunicarse via mail</p>
+                    <p>massi.laplata@gmail.com</p>
+                </div>
+
+            </div>
+
+        </section>
 
 
 
     </main>
 
     <footer>
-        
+
+
+        <section class="row g-0 justify-content-center align-items-center">
+            <div class="col d-flex align-items-center justify-content-center ">
+                <ul>
+                    <li><a href="#inicio">HOME</a></li>
+                    <li><a href="./pages/productos.html">PRODUCTOS</a></li>
+                    <li><a href="./pages/recetas.html">RECETAS</a></li>
+                </ul>
+            </div>
+            <div class="col d-flex align-items-center justify-content-center">
+                <div class="row">
+                    <div class="col"><img src="./img/zetaalphalogo2.png" width="100%" id="logo"></div>
+                    <ul class="col">
+                        <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a>
+                        </li>
+                        <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i
+                                    class="bi bi-youtube fa-2x"></i></a></li>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="col g-0 d-flex align-items-center justify-content-center">
+                <ul>
+                    <li><a href="./pages/tienda.html">TIENDA</a></li>
+                    <li><a href="./pages/contacto.html">CONTACTO</a></li>
+                </ul>
+            </div>
+        </section>
 
     </footer>
 
