--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                                 <div class="listamenu"><i class="bi bi-list fa-10x"></i>
                                 </div>
                                 <ul>
-                                    <li><a href="">HOME</a></li>
-                                    <li><a href="s">ARTE</a></li>
-                                    <li><a href="">TIENDA</a></li>
+                                    <li><a href="index.html">HOME</a></li>
+                                    <li><a href="./pages/arte.html">ARTE</a></li>
+                                    <li><a href="./pages/tienda.html">TIENDA</a></li>
                                     <li><a href="os">BIO</a></li>
                                     <li><a href="os">CONTACTO</a></li>
                                 </ul>
@@ -76,11 +76,11 @@
                     <div id="menu">
                         <ul class="d-flex flex-wrap justify-content-around menuCenter">
                             <li><a href="index.html">HOME</a>
-                            <li><a href="./pages/productos.html">ARTE</a></li>
+                            <li><a href="./pages/arte.html">ARTE</a></li>
 
 
-                            <li><a href="./pages/recetas.html">TIENDA</a></li>
-                            <li><a href="./pages/tienda.html">BIO</a></li>
+                            <li><a href="./pages/tienda.html">TIENDA</a></li>
+                            <li><a href="./pages/bio.html">BIO</a></li>
                             <li><a href="./pages/contacto.html">CONTACTO</a></li>
                         </ul>
                     </div>
@@ -119,7 +119,7 @@
                 <div>
                     <h1>ARTE</h1>
                     <p>
-                        A traves de la programacion encuentro plasmar mis visiones e ideas
+                        A traves de la programacion encuentro plasmar las visiones e ideas
                     </p>
                     <div>
                         <a href="./pages/arte.html">Ver Mas</a>
@@ -130,15 +130,15 @@
             </div>
             <div class="col">
                 <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel">
-                    <div class="carousel-inner ">
+                    <div class="carousel-inner " >
                         <div class="carousel-item active">
-                            <img src="./img/zetaalphalogo2.png" class="d-block w-100" alt="...">
+                            <img src="./img/fungi1.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item ">
-                            <img src="./img/zetaalphalogo2.png" class="d-block w-100" alt="...">
+                            <img src="./img/vacunas.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item ">
-                            <img src="./img/zetaalphalogo2.png" class="d-block w-100" alt="...">
+                            <img src="./img/cables__38_.jpg" class="d-block w-100" alt="...">
                         </div>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
 
             <div class="card-group">
                 <div class="card">
-                    <img class="card-img-top" src="./img/zetaalphalogo2.png" alt="Card image cap">
+                    <img class="card-img-top" src="./img/kalei1.gif" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">CUADROS</h5>
                         <p class="card-text">Creados para la relajacion y alteracion de la consciencia</p>
@@ -177,10 +177,10 @@
                 </div>
 
                 <div class="card">
-                    <img class="card-img-top" src="./img/zetaalphalogo2.png" alt="Card image cap">
+                    <img class="card-img-top" src="./img/joya1.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">JOYAS</h5>
-                        <p class="card-text">Diseños de Autor, Colecciones !</p>
+                        <p class="card-text">Diseños de Autor</p>
                     </div>
                     <div class="card-footer">
                         <a href="./pages/tienda.html#joyas">Ver Mas</a>
@@ -191,13 +191,27 @@
 
         </section>
 
-        <section class="row contactoZ1 ">
+        
+        <section>
+            <div class="iFrame2">
+                <iframe src="indexcables2.html" class="iFrame"></iframe>
+            </div>
+
+
+        </section>
+
+
+        <section>
 
             <div class="col">
                 <div class="contactoZ">
                     <h2>CONTACTO</h2>
-                    <p>Para diseños personalizados pueden comunicarse via mail</p>
+                    <p>Para diseños personalizados pueden comunicarse via</p>
+                    <i class="bi bi-envelope"></i>
                     <p>massi.laplata@gmail.com</p>
+                    <i class="bi bi-instagram"></i>
+                    <p>@zetaintrip</p>
+
                 </div>
 
             </div>
@@ -214,27 +228,26 @@
         <section class="row g-0 justify-content-center align-items-center">
             <div class="col d-flex align-items-center justify-content-center ">
                 <ul>
-                    <li><a href="#inicio">HOME</a></li>
-                    <li><a href="./pages/productos.html">PRODUCTOS</a></li>
-                    <li><a href="./pages/recetas.html">RECETAS</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="./pages/arte.html">ARTE</a></li>
+                    <li><a href="./pages/tienda.html">TIENDA</a></li>
                 </ul>
             </div>
-            <div class="col d-flex align-items-center justify-content-center">
-                <div class="row">
-                    <div class="col"><img src="./img/zetaalphalogo2.png" width="100%" id="logo"></div>
-                    <ul class="col">
-                        <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a>
-                        </li>
-                        <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i
-                                    class="bi bi-youtube fa-2x"></i></a></li>
-                    </ul>
+            <div class="col d-flex flex-wrap align-items-center justify-content-center">
+                <div >
+                    <div class="col"><img src="./img/zetaalphalogo2.png" width="100px" height="80%" id="logo"></div>
                 </div>
 
             </div>
             <div class="col g-0 d-flex align-items-center justify-content-center">
                 <ul>
-                    <li><a href="./pages/tienda.html">TIENDA</a></li>
+                    <li><a href="./pages/bio.html">BIO</a></li>
                     <li><a href="./pages/contacto.html">CONTACTO</a></li>
+                        <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a>
+                        </li>
+                        <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i
+                                    class="bi bi-youtube fa-2x"></i></a></li>
+                    
                 </ul>
             </div>
         </section>
