--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -110,52 +110,23 @@
 
     <main class="container-fluid main2">
 
-
-
-
-        <section class="row arteZ">
-
-            <div class="col d-flex justify-content-center align-items-center">
-                <div>
-                    <h1>ARTE</h1>
-                    <p>
-                        A traves de la programacion encuentro plasmar mis visiones e ideas
-                    </p>
-                    <div>
-                        <a href="arte.html">Ver Mas</a>
-                    </div>
-                </div>
-
-
-            </div>
-            <div class="col">
-                <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel">
-                    <div class="carousel-inner ">
-                        <div class="carousel-item active">
-                            <img src="../img/zetaalphalogo2.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item ">
-                            <img src="../img/zetaalphalogo2.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item ">
-                            <img src="../img/zetaalphalogo2.png" class="d-block w-100" alt="...">
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-
-        </section>
-
-        
         <section>
-            <div class="iFrame2">
-                <iframe src="../indexKalei.html" class="iFrame"></iframe>
+
+            <div class="col">
+                <div class="contactoZ">
+                    <h2>CONTACTO</h2>
+                    <p>Para diseños personalizados pueden comunicarse via</p>
+                    <i class="bi bi-envelope"></i>
+                    <p>massi.laplata@gmail.com</p>
+                    <i class="bi bi-instagram"></i>
+                    <p>@zetaintrip</p>
+
+                </div>
+
             </div>
 
-
         </section>
+
 
     </main>
 
@@ -176,7 +147,7 @@
                 </div>
 
             </div>
-            <div class="col g-0 d-flex align-items-center justify-content-center">
+            <div class="col g-0 d-flex align-items-center justify-content-center ">
                 <ul>
                     <li><a href="bio.html">BIO</a></li>
                     <li><a href="contacto.html">CONTACTO</a></li>
