ya me duelen los dedos

--- a/index.html
+++ b/index.html
@@ -208,8 +208,9 @@
                     <h2>CONTACTO</h2>
                     <p>Para diseños personalizados pueden comunicarse via</p>
                     <i class="bi bi-envelope"></i>
+                    
                     <p>massi.laplata@gmail.com</p>
-                    <i class="bi bi-instagram"></i>
+                    <a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a>
                     <p>@zetaintrip</p>
 
                 </div>
@@ -245,7 +246,7 @@
                     <li><a href="./pages/contacto.html">CONTACTO</a></li>
                         <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a>
                         </li>
-                        <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i
+                        <li><a href="https://www.youtube.com/channel/UCxhgYlXQoZ2Hd5-Eu1xRZOQ"><i
                                     class="bi bi-youtube fa-2x"></i></a></li>
                     
                 </ul>
