--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -117,8 +117,9 @@
                     <h2>CONTACTO</h2>
                     <p>Para diseños personalizados pueden comunicarse via</p>
                     <i class="bi bi-envelope"></i>
+                    
                     <p>massi.laplata@gmail.com</p>
-                    <i class="bi bi-instagram"></i>
+                    <a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a>
                     <p>@zetaintrip</p>
 
                 </div>
