--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -46,7 +46,7 @@
 
 </head>
 
-<body>
+<body class="bg-dark">
     <!-- para bloqeuar click derecho -->
     <!-- <body oncontextmenu="return false;"></body> -->
 
@@ -112,7 +112,7 @@
 
         <section>
 
-            <div class="col">
+            <div class="col bg-light">
                 <div class="contactoZ">
                     <h2>CONTACTO</h2>
                     <p>Para diseños personalizados pueden comunicarse via</p>
@@ -144,7 +144,7 @@
             </div>
             <div class="col d-flex flex-wrap align-items-center justify-content-center">
                 <div >
-                    <div class="col"><img src="../img/zetaalphalogo2.png" width="100px" height="80%" id="logo"></div>
+                    <div class="col"><img src="../img/zetaalphalogo2.png"  width="100px" height="80%" id="logo"></div>
                 </div>
 
             </div>
