--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -46,7 +46,7 @@
 
 </head>
 
-<body>
+<body class="bg-dark">
     <!-- para bloqeuar click derecho -->
     <!-- <body oncontextmenu="return false;"></body> -->
 
@@ -112,11 +112,11 @@
 
 
 
-        <section class="row arteZ tiendaZ">
+        <section class="row g-0 arteZ tiendaZ bg-dark">
 
 
-            <div class="card-group">
-                <div class="card">
+            <div class=" card-group">
+                <div class="col-12 col-sm-4 card" data-aos="fade-left">
                     <img class="card-img-top" src="../img/kalei1.gif" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">CUADROS</h5>
@@ -126,17 +126,19 @@
                         <a href="tienda.html#cuadros">Ver Mas</a>
                     </div>
                 </div>
-                <div class="col d-flex flex-wrap justify-content-center align-items-center tiendaText">
+                <div class="col-12 col-sm-4 d-flex flex-wrap justify-content-center align-items-center tiendaText  text-light">
 
-                    <h1>TIENDA</h1>
-                    <p>Explora todos los productos y regalate alegria</p>
+                        <h1>TIENDA</h1>
+
+
+                    <p>Explora todos los productos</p>
                 </div>
 
-                <div class="card">
+                <div class="col-12 col-sm-4 card" data-aos="fade-right">
                     <img class="card-img-top" src="../img/joya1.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">JOYAS</h5>
-                        <p class="card-text">Diseños de Autor, Colecciones !</p>
+                        <p class="card-text">Diseños de Autor</p>
                     </div>
                     <div class="card-footer">
                         <a href="tienda.html#joyas">Ver Mas</a>
@@ -146,6 +148,7 @@
 
 
         </section>
+
 
     </main>
 
@@ -162,7 +165,7 @@
             </div>
             <div class="col d-flex flex-wrap align-items-center justify-content-center">
                 <div >
-                    <div class="col"><img src="../img/zetaalphalogo2.png" width="100px" height="80%" id="logo"></div>
+                    <div class="col"><img src="../img/zetaalphalogo2.png"  width="100px" height="80%" id="logo"></div>
                 </div>
 
             </div>
