--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 </head>
 
-<body>
+<body class="bg-dark">
     <!-- para bloqeuar click derecho -->
     <!-- <body oncontextmenu="return false;"></body> -->
 
@@ -60,14 +60,14 @@
                     <div id="menuhamburguesa">
                         <ul class="d-flex justify-content-center menuCenter">
                             <li>
-                                <div class="listamenu"><i class="bi bi-list fa-10x"></i>
+                                <div class="listamenu"><i class="bi bi-list"></i>
                                 </div>
                                 <ul>
                                     <li><a href="index.html">HOME</a></li>
                                     <li><a href="./pages/arte.html">ARTE</a></li>
                                     <li><a href="./pages/tienda.html">TIENDA</a></li>
-                                    <li><a href="os">BIO</a></li>
-                                    <li><a href="os">CONTACTO</a></li>
+                                    <li><a href="./pages/bio.html">BIO</a></li>
+                                    <li><a href="./pages/contacto.html">CONTACTO</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -113,10 +113,9 @@
 
 
 
-        <section class="row arteZ">
-
-            <div class="col d-flex justify-content-center align-items-center">
-                <div>
+        <section class="row g-0 bg-light d-flex justify-content-center align-items-center" >
+                <div class="col-12 col-sm-6 artePadding">
+                <div class="arteZ">
                     <h1>ARTE</h1>
                     <p>
                         A traves de la programacion encuentro plasmar las visiones e ideas
@@ -128,39 +127,33 @@
 
 
             </div>
-            <div class="col">
-                <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel">
+            <div class="col-12 col-sm-6 carrusel">
+                <div id="carouselExampleSlidesOnly" class="  carousel slide " data-bs-ride="carousel">
                     <div class="carousel-inner " >
                         <div class="carousel-item active">
-                            <img src="./img/fungi1.jpg" class="d-block w-100" alt="...">
+                            <img src="./img/fungi1.jpg" class="d-block w-100" alt="fungi">
                         </div>
                         <div class="carousel-item ">
-                            <img src="./img/vacunas.jpg" class="d-block w-100" alt="...">
+                            <img src="./img/vacunas.jpg" class="d-block w-100" alt="vacuna">
                         </div>
                         <div class="carousel-item ">
-                            <img src="./img/cables__38_.jpg" class="d-block w-100" alt="...">
+                            <img src="./img/cables__38_.jpg" class="d-block w-100" alt="mandala1">
                         </div>
                     </div>
                 </div>
 
             </div>
 
+            
 
         </section>
 
-        <section>
-            <div class="iFrame2">
-                <iframe src="indexCables1.html" class="iFrame"></iframe>
-            </div>
+
+        <section class="row g-0 arteZ tiendaZ bg-dark">
 
 
-        </section>
-
-        <section class="row arteZ tiendaZ">
-
-
-            <div class="card-group">
-                <div class="card">
+            <div class=" card-group">
+                <div class="col-12 col-sm-4 card" data-aos="fade-right">
                     <img class="card-img-top" src="./img/kalei1.gif" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">CUADROS</h5>
@@ -170,13 +163,15 @@
                         <a href="./pages/tienda.html#cuadros">Ver Mas</a>
                     </div>
                 </div>
-                <div class="col d-flex flex-wrap justify-content-center align-items-center tiendaText">
+                <div class="col-12 col-sm-4 d-flex flex-wrap justify-content-center align-items-center tiendaText  text-light">
 
-                    <h1>TIENDA</h1>
-                    <p>Explora todos los productos y regalate alegria</p>
+                        <h1>TIENDA</h1>
+
+
+                    <p>Explora todos los productos</p>
                 </div>
 
-                <div class="card">
+                <div class="col-12 col-sm-4 card" data-aos="fade-left">
                     <img class="card-img-top" src="./img/joya1.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">JOYAS</h5>
@@ -192,16 +187,16 @@
         </section>
 
         
-        <section>
+        <!-- <section>
             <div class="iFrame2">
                 <iframe src="indexcables2.html" class="iFrame"></iframe>
             </div>
 
 
-        </section>
+        </section> -->
 
 
-        <section>
+        <section class="bg-light">
 
             <div class="col">
                 <div class="contactoZ">
