--- a/pages/arte.html
+++ b/pages/arte.html
@@ -46,7 +46,7 @@
 
 </head>
 
-<body>
+<body class="bg-dark">
     <!-- para bloqeuar click derecho -->
     <!-- <body oncontextmenu="return false;"></body> -->
 
@@ -113,50 +113,143 @@
 
 
 
-        <section class="row arteZ">
-
-            <div class="col d-flex justify-content-center align-items-center">
-                <div>
+        <section class="row g-0 bg-light d-flex justify-content-center align-items-center">
+            <div class="col-12 col-sm-6 artePadding">
+                <div class="arteZ">
                     <h1>ARTE</h1>
                     <p>
-                        A traves de la programacion encuentro plasmar mis visiones e ideas
+                        A traves de la programacion encuentro plasmar las visiones e ideas
                     </p>
-                    <div>
-                        <a href="arte.html">Ver Mas</a>
-                    </div>
+
                 </div>
 
 
             </div>
-            <div class="col">
-                <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel">
+            <div class="col-12 col-sm-6 carrusel">
+                <div id="carouselExampleSlidesOnly" class="  carousel slide " data-bs-ride="carousel">
                     <div class="carousel-inner ">
                         <div class="carousel-item active">
-                            <img src="../img/zetaalphalogo2.png" class="d-block w-100" alt="...">
+                            <img src="../img/fungi1.jpg" class="d-block w-100" alt="fungi">
                         </div>
                         <div class="carousel-item ">
-                            <img src="../img/zetaalphalogo2.png" class="d-block w-100" alt="...">
+                            <img src="../img/vacunas.jpg" class="d-block w-100" alt="vacuna">
                         </div>
                         <div class="carousel-item ">
-                            <img src="../img/zetaalphalogo2.png" class="d-block w-100" alt="...">
+                            <img src="../img/cables__38_.jpg" class="d-block w-100" alt="mandala1">
                         </div>
                     </div>
                 </div>
 
             </div>
+
+
 
 
         </section>
 
-        
         <section>
+            <div class="bg-dark animacionText text-light">
+                <h1>ANIMACIONES WEB</h1>
+            </div>
+            <div class="row m-3">
+                <div class=" col-12 col-sm-6">
+                    <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        <img class="w-100 mb-4 rounded" data-aos="fade-left" src="../img/kaleidos.jpg" alt="">
+                    </a>
+
+                    <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                        <img class="w-100 mb-4 rounded" data-aos="fade-right" src="../img/mandala.jpg" alt="">
+                    </a>
+                </div>
+                <div class=" col-12 col-sm-6">
+                    <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                        <img class="w-100 mb-4 rounded" data-aos="fade-left" src="../img/sphere.jpg" alt="">
+                    </a>
+                    <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal4">
+                        <img class="w-100 mb-4 rounded" data-aos="fade-right" src="../img/spiral.jpg" alt="">
+                    </a>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section>
+
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-xl modal-dialog-centered">
+                    <div class="modal-content">
+                        <section>
+                            <div class="iFrame2">
+                                <iframe src="../indexKalei.html" class="iFrame"></iframe>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal2 -->
+            <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-xl modal-dialog-centered">
+                    <div class="modal-content">
+                        <section>
+                            <div class="iFrame2">
+                                <iframe src="../indexcables3.html" class="iFrame"></iframe>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal3 -->
+            <div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-xl modal-dialog-centered">
+                    <div class="modal-content">
+                        <section>
+                            <div class="iFrame2">
+                                <iframe src="../indexCables1.html" class="iFrame"></iframe>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal4 -->
+            <div class="modal fade" id="exampleModal4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-xl modal-dialog-centered">
+                    <div class="modal-content">
+                        <section>
+                            <div class="iFrame2">
+                                <iframe src="../indexcables2.html" class="iFrame"></iframe>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+
+        <!-- <section>
             <div class="iFrame2">
                 <iframe src="../indexKalei.html" class="iFrame"></iframe>
             </div>
 
 
-        </section>
+        </section> -->
 
+
+        <!-- 
+        <section>
+            <div class="iFrame2">
+                <iframe src="indexCables1.html" class="iFrame"></iframe>
+            </div>
+
+
+        </section> -->
     </main>
 
     <footer>
@@ -171,22 +264,26 @@
                 </ul>
             </div>
             <div class="col d-flex flex-wrap align-items-center justify-content-center">
-                <div >
-                    <div class="col"><img src="../img/zetaalphalogo2.png" width="100px" height="80%" id="logo"></div>
+                <div>
+                    <div class="col"><img src="../img/zetaalphalogo2.png"  width="100px" height="80%" id="logo"></div>
                 </div>
 
             </div>
+
             <div class="col g-0 d-flex align-items-center justify-content-center">
                 <ul>
                     <li><a href="bio.html">BIO</a></li>
                     <li><a href="contacto.html">CONTACTO</a></li>
-                        <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a>
-                        </li>
-                        <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i
-                                    class="bi bi-youtube fa-2x"></i></a></li>
-                    
+                    <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a>
+                    </li>
+                    <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-youtube fa-2x"></i></a>
+                    </li>
+
                 </ul>
             </div>
+        </section>
+        <section>
+
         </section>
 
     </footer>
