--- a/indexSpiral.html
+++ b/indexSpiral.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>kaleidosparallaxocclusion</title>
+    <title>spiral</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
-    <meta itemprop="name" content="kaleidosparallaxocclusion">
+    <meta itemprop="name" content="spiral">
     <meta itemprop="description" content="made with cables">
     <meta itemprop="image" content="screenshot.png">
     <meta name="description" content="made with cables" />
@@ -58,10 +58,7 @@
 
 <body>
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
-    <footer>
 
-        <!-- we would greatly appreciate if you link cables somewhere on your site! and tell us your website! thanks <3 :) -->
-    </footer>
 
     <libs/>
     <script type="text/javascript" src="js3/patch.js" async></script>
