--- a/pages/arte.html
+++ b/pages/arte.html
@@ -60,7 +60,7 @@
                     <div id="menuhamburguesa">
                         <ul class="d-flex justify-content-center menuCenter">
                             <li>
-                                <div class="listamenu"><i class="bi bi-list fa-10x"></i>
+                                <div class="listamenu"><i class="bi bi-list instSize"></i>
                                 </div>
                                 <ul>
                                     <li><a href="../index.html">HOME</a></li>
@@ -154,7 +154,7 @@
             <div class="row m-3">
                 <div class=" col-12 col-sm-6">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <img class="w-100 mb-4 rounded" data-aos="fade-left" src="../img/kaleidos.jpg" alt="">
+                        <img class="w-100 mb-4 rounded" data-aos="fade-left" src="../img/spiral2.png" alt="">
                     </a>
 
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal2">
@@ -184,7 +184,7 @@
                     <div class="modal-content">
                         <section>
                             <div class="iFrame2">
-                                <iframe src="../indexKalei.html" class="iFrame"></iframe>
+                                <iframe src="../indexSpiral.html" class="iFrame"></iframe>
                             </div>
                         </section>
                     </div>
