--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,7 +60,7 @@
                     <div id="menuhamburguesa">
                         <ul class="d-flex justify-content-center menuCenter">
                             <li>
-                                <div class="listamenu"><i class="bi bi-list fa-10x"></i>
+                                <div class="listamenu"><i class="bi bi-list instSize"></i>
                                 </div>
                                 <ul>
                                     <li><a href="../index.html">HOME</a></li>
@@ -94,7 +94,7 @@
 
                 <div class="col-5 d-flex flex-wrap justify-content-center">
                     <div id="register">
-                        <i class="bi bi-person-circle loginPerfil "></i>
+                        <i class="bi bi-person-circle loginPerfil  "></i>
                         <a href="#">LOGIN</a>
                     </div>
                 </div>
@@ -116,10 +116,10 @@
                 <div class="contactoZ">
                     <h2>CONTACTO</h2>
                     <p>Para diseños personalizados pueden comunicarse via</p>
-                    <i class="bi bi-envelope"></i>
+                    <i class="bi bi-envelope instSize"></i>
                     
                     <p>massi.laplata@gmail.com</p>
-                    <a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram instSize"></i></a>
                     <p>@zetaintrip</p>
 
                 </div>
