agregue sass2 y seo

--- a/indexCables1.html
+++ b/indexCables1.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
     <meta itemprop="name" content="projection psyco">
     <meta itemprop="description" content="psyco1">
-    <meta name="description" content="cables" />
+    <meta name="description" content="cablesgl animacion" />
 
     <style>
         body {
