--- a/pages/arte.html
+++ b/pages/arte.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zeta Website</title>
+    <title>Portafolio de Arte Digital con Animaciones Web e Imagenes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -88,7 +88,7 @@
 
                 </div>
                 <div class="col-2 d-flex flex-wrap justify-content-center">
-                    <div data-aos="fade-down" class="logo2">
+                    <div class="mixing7">
                         <img src="../img/zetaalphalogo2.png" height="100" width="100" alt="logo">
                     </div>
                 </div>
@@ -109,44 +109,43 @@
     </header>
 
 
-    <main class="container-fluid main2">
+    <main class="container-fluid px-lg-4 px-md-3 px-0">
 
 
 
 
-        <section class="row g-0 bg-light d-flex justify-content-center align-items-center">
+        <section class="row g-0 bg-light flex-S " >
             <div class="col-12 col-sm-6 artePadding">
-                <div class="arteZ">
-                    <h1>ARTE</h1>
-                    <p>
-                        A traves de la programacion encuentro plasmar las visiones e ideas
-                    </p>
-
-                </div>
-
+            <div class="arteZ">
+                <h1>ARTE</h1>
+                <p>
+                    A traves de la programacion encuentro plasmar las visiones e ideas
+                </p>
 
             </div>
-            <div class="col-12 col-sm-6 carrusel">
-                <div id="carouselExampleSlidesOnly" class="  carousel slide " data-bs-ride="carousel">
-                    <div class="carousel-inner ">
-                        <div class="carousel-item active">
-                            <img src="../img/fungi1.jpg" class="d-block w-100" alt="fungi">
-                        </div>
-                        <div class="carousel-item ">
-                            <img src="../img/vacunas.jpg" class="d-block w-100" alt="vacuna">
-                        </div>
-                        <div class="carousel-item ">
-                            <img src="../img/cables__38_.jpg" class="d-block w-100" alt="mandala1">
-                        </div>
+
+
+        </div>
+        <div class="col-12 col-sm-6 carrusel">
+            <div id="carouselExampleSlidesOnly" class="  carousel slide " data-bs-ride="carousel">
+                <div class="carousel-inner " >
+                    <div class="carousel-item active">
+                        <img src="../img/fungi1.jpg" class="d-block w-100" alt="seta de hongo 3D renderizado">
+                    </div>
+                    <div class="carousel-item ">
+                        <img src="../img/vacunas.jpg" class="d-block w-100" alt="cabeza de humano vacunas">
+                    </div>
+                    <div class="carousel-item ">
+                        <img src="../img/cables__38_.jpg" class="d-block w-100" alt="mandala de muchos colores">
                     </div>
                 </div>
-
             </div>
 
+        </div>
 
+        
 
-
-        </section>
+    </section>
 
         <section>
             <div class="bg-dark animacionText text-light">
@@ -155,19 +154,19 @@
             <div class="row m-3">
                 <div class=" col-12 col-sm-6">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <img class="w-100 mb-4 rounded" data-aos="fade-left" src="../img/spiral2.png" alt="">
+                        <img class="w-100 mb-4 rounded mixing1 " data-aos="fade-left" src="../img/spiral2.png" alt="">
                     </a>
 
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal2">
-                        <img class="w-100 mb-4 rounded" data-aos="fade-right" src="../img/mandala.jpg" alt="">
+                        <img class="w-100 mb-4 rounded mixing2" data-aos="fade-right" src="../img/mandala.jpg" alt="">
                     </a>
                 </div>
                 <div class=" col-12 col-sm-6">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal3">
-                        <img class="w-100 mb-4 rounded" data-aos="fade-left" src="../img/sphere.jpg" alt="">
+                        <img class="w-100 mb-4 rounded mixing3" data-aos="fade-left" src="../img/sphere.jpg" alt="">
                     </a>
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal4">
-                        <img class="w-100 mb-4 rounded" data-aos="fade-right" src="../img/spiral.jpg" alt="">
+                        <img class="w-100 mb-4 rounded mixing4" data-aos="fade-right" src="../img/spiral.jpg" alt="">
                     </a>
                 </div>
 
@@ -234,23 +233,6 @@
         </section>
 
 
-        <!-- <section>
-            <div class="iFrame2">
-                <iframe src="../indexKalei.html" class="iFrame"></iframe>
-            </div>
-
-
-        </section> -->
-
-
-        <!-- 
-        <section>
-            <div class="iFrame2">
-                <iframe src="indexCables1.html" class="iFrame"></iframe>
-            </div>
-
-
-        </section> -->
     </main>
 
     <footer>
@@ -266,7 +248,7 @@
             </div>
             <div class="col d-flex flex-wrap align-items-center justify-content-center">
                 <div>
-                    <div class="col"><img src="../img/zetaalphalogo2.png"  width="100px" height="80%" id="logo"></div>
+                    <div class="col mixing7"><img src="../img/zetaalphalogo2.png"  width="100px" height="80%" id="logo"></div>
                 </div>
 
             </div>
