--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zeta Website</title>
+    <title>Pagina Web Principal de Zeta</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="shotcut icon" href="./img/LOGO32x32.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+    <meta name="description" content="Descubre mi Webpage personal con animaciones webgl, tienda de productos propios, como joyas, ropa y cuadros meditativos">
+    <meta name="keywords" content="desarrollo web, carrera, coderhouse, trabajo, online, expertos, mejores, full stack, frontend, backend, developer, portafolio, curso, animacion, web, webgl, digital, cuadros, joyas, 3d, impresion 3d, tienda, personal, perla negra">
 
     <!-- para bloquear el f12 -->
     <!-- <script>
@@ -56,7 +57,7 @@
 
         <nav class="container-fluid navbarZ">
 
-            <div class="row align-items-center justify-content-center ">
+            <div class="row flex-S ">
                 <div class="col-5 g-1">
                     <div id="menuhamburguesa">
                         <ul class="d-flex justify-content-center menuCenter">
@@ -88,8 +89,8 @@
 
                 </div>
                 <div class="col-2 d-flex flex-wrap justify-content-center">
-                    <div data-aos="fade-down" class="logo2">
-                        <img src="./img/zetaalphalogo2.png" height="100" width="100" alt="logo">
+                    <div  class="mixing7">
+                        <img src="./img/zetaalphalogo2.png" height="100" width="100" alt="logo de zeta">
                     </div>
                 </div>
 
@@ -114,7 +115,7 @@
 
 
 
-        <section class="row g-0 bg-light d-flex justify-content-center align-items-center" >
+        <section class="row g-0 bg-light flex-S " >
                 <div class="col-12 col-sm-6 artePadding">
                 <div class="arteZ">
                     <h1>ARTE</h1>
@@ -132,13 +133,13 @@
                 <div id="carouselExampleSlidesOnly" class="  carousel slide " data-bs-ride="carousel">
                     <div class="carousel-inner " >
                         <div class="carousel-item active">
-                            <img src="./img/fungi1.jpg" class="d-block w-100" alt="fungi">
+                            <img src="./img/fungi1.jpg" class="d-block w-100" alt="seta de hongo 3D renderizado">
                         </div>
                         <div class="carousel-item ">
-                            <img src="./img/vacunas.jpg" class="d-block w-100" alt="vacuna">
+                            <img src="./img/vacunas.jpg" class="d-block w-100" alt="cabeza de humano vacunas">
                         </div>
                         <div class="carousel-item ">
-                            <img src="./img/cables__38_.jpg" class="d-block w-100" alt="mandala1">
+                            <img src="./img/cables__38_.jpg" class="d-block w-100" alt="mandala de muchos colores">
                         </div>
                     </div>
                 </div>
@@ -154,9 +155,9 @@
 
 
             <div class=" card-group">
-                <div class="col-12 col-sm-4 card" data-aos="fade-right">
+                <div class="col-12 col-sm-4 card mixing5" data-aos="fade-right">
                     <img class="card-img-top" src="./img/kalei1.gif" alt="Card image cap">
-                    <div class="card-body">
+                    <div class="card-body ">
                         <h5 class="card-title">CUADROS</h5>
                         <p class="card-text">Creados para la relajacion y alteracion de la consciencia</p>
                     </div>
@@ -164,7 +165,7 @@
                         <a href="./pages/tienda.html#cuadros">Ver Mas</a>
                     </div>
                 </div>
-                <div class="col-12 col-sm-4 d-flex flex-wrap justify-content-center align-items-center tiendaText  text-light">
+                <div class="col-12 col-sm-4 flex-S flex-wrap tiendaText  text-light">
 
                         <h1>TIENDA</h1>
 
@@ -172,9 +173,9 @@
                     <p>Explora todos los productos</p>
                 </div>
 
-                <div class="col-12 col-sm-4 card" data-aos="fade-left">
+                <div class="col-12 col-sm-4 card mixing6" data-aos="fade-left">
                     <img class="card-img-top" src="./img/joya1.jpg" alt="Card image cap">
-                    <div class="card-body">
+                    <div class="card-body ">
                         <h5 class="card-title">JOYAS</h5>
                         <p class="card-text">Diseños de Autor</p>
                     </div>
@@ -200,7 +201,7 @@
         <section class="bg-light">
 
             <div class="col">
-                <div class="contactoZ">
+                <div class="contactoZ arteZ">
                     <h2>CONTACTO</h2>
                     <p>Para diseños personalizados pueden comunicarse via</p>
                     <i class="bi bi-envelope instSize"></i>
@@ -222,8 +223,8 @@
     <footer>
 
 
-        <section class="row g-0 justify-content-center align-items-center">
-            <div class="col d-flex align-items-center justify-content-center ">
+        <section class="row g-0 ">
+            <div class="col flex-S ">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="./pages/arte.html">ARTE</a></li>
@@ -232,11 +233,11 @@
             </div>
             <div class="col d-flex flex-wrap align-items-center justify-content-center">
                 <div >
-                    <div class="col"><img src="./img/zetaalphalogo2.png" width="100px" height="80%" id="logo"></div>
+                    <div class="col mixing7"><img src="./img/zetaalphalogo2.png" width="100px" height="80%" id="logo"></div>
                 </div>
 
             </div>
-            <div class="col g-0 d-flex align-items-center justify-content-center">
+            <div class="col g-0 flex-s ">
                 <ul>
                     <li><a href="./pages/bio.html">BIO</a></li>
                     <li><a href="./pages/contacto.html">CONTACTO</a></li>
