--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zeta Website</title>
+    <title>Pagina de Contacto para Trabajo Online, Diseños Personalizados y Programacion Audiovisual</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -56,7 +56,7 @@
 
         <nav class="container-fluid navbarZ">
 
-            <div class="row align-items-center justify-content-center ">
+            <div class="row flex-S ">
                 <div class="col-5 g-1">
                     <div id="menuhamburguesa">
                         <ul class="d-flex justify-content-center menuCenter">
@@ -88,7 +88,7 @@
 
                 </div>
                 <div class="col-2 d-flex flex-wrap justify-content-center">
-                    <div data-aos="fade-down" class="logo2">
+                    <div class="mixing7">
                         <img src="../img/zetaalphalogo2.png" height="100" width="100" alt="logo">
                     </div>
                 </div>
@@ -109,12 +109,12 @@
     </header>
 
 
-    <main class="container-fluid main2">
+    <main class="container-fluid px-lg-4 px-md-3 px-0">
 
         <section>
 
             <div class="col bg-light">
-                <div class="contactoZ">
+                <div class="contactoZ arteZ">
                     <h2>CONTACTO</h2>
                     <p>Para diseños personalizados pueden comunicarse via</p>
                     <i class="bi bi-envelope instSize"></i>
@@ -145,7 +145,7 @@
             </div>
             <div class="col d-flex flex-wrap align-items-center justify-content-center">
                 <div >
-                    <div class="col"><img src="../img/zetaalphalogo2.png"  width="100px" height="80%" id="logo"></div>
+                    <div class="col mixing7"><img src="../img/zetaalphalogo2.png"  width="100px" height="80%" id="logo"></div>
                 </div>
 
             </div>
