--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zeta Website</title>
+    <title>Tienda de Productos de Autor, Cuadros, Ropa, Mantas, Joyas Diseños Unicos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -88,7 +88,7 @@
 
                 </div>
                 <div class="col-2 d-flex flex-wrap justify-content-center">
-                    <div data-aos="fade-down" class="logo2">
+                    <div class="mixing7">
                         <img src="../img/zetaalphalogo2.png" height="100" width="100" alt="logo">
                     </div>
                 </div>
@@ -109,7 +109,7 @@
     </header>
 
 
-    <main class="container-fluid main2">
+    <main class="container-fluid px-lg-4 px-md-3 px-0">
 
 
 
@@ -117,7 +117,7 @@
 
 
             <div class=" card-group">
-                <div class="col-12 col-sm-4 card" data-aos="fade-left">
+                <div class="col-12 col-sm-4 card mixing5" data-aos="fade-left">
                     <img class="card-img-top" src="../img/kalei1.gif" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">CUADROS</h5>
@@ -135,7 +135,7 @@
                     <p>Explora todos los productos</p>
                 </div>
 
-                <div class="col-12 col-sm-4 card" data-aos="fade-right">
+                <div class="col-12 col-sm-4 card mixing6" data-aos="fade-right">
                     <img class="card-img-top" src="../img/joya1.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">JOYAS</h5>
@@ -166,7 +166,7 @@
             </div>
             <div class="col d-flex flex-wrap align-items-center justify-content-center">
                 <div >
-                    <div class="col"><img src="../img/zetaalphalogo2.png"  width="100px" height="80%" id="logo"></div>
+                    <div class="col mixing7"><img src="../img/zetaalphalogo2.png"  width="100px" height="80%" id="logo"></div>
                 </div>
 
             </div>
