agregue parallax js

--- a/pages/arte.html
+++ b/pages/arte.html
@@ -154,19 +154,19 @@
             <div class="row m-3">
                 <div class=" col-12 col-sm-6">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <img class="w-100 mb-4 rounded mixing1 " data-aos="fade-left" src="../img/spiral2.png" alt="">
+                        <img class="w-100 mb-4 rounded mixing1 " data-aos="fade-up" src="../img/spiral2.png" alt="">
                     </a>
 
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal2">
-                        <img class="w-100 mb-4 rounded mixing2" data-aos="fade-right" src="../img/mandala.jpg" alt="">
+                        <img class="w-100 mb-4 rounded mixing2" data-aos="fade-up" src="../img/mandala.jpg" alt="">
                     </a>
                 </div>
                 <div class=" col-12 col-sm-6">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal3">
-                        <img class="w-100 mb-4 rounded mixing3" data-aos="fade-left" src="../img/sphere.jpg" alt="">
+                        <img class="w-100 mb-4 rounded mixing3" data-aos="fade-up" src="../img/sphere.jpg" alt="">
                     </a>
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal4">
-                        <img class="w-100 mb-4 rounded mixing4" data-aos="fade-right" src="../img/spiral.jpg" alt="">
+                        <img class="w-100 mb-4 rounded mixing4" data-aos="fade-up" src="../img/spiral.jpg" alt="">
                     </a>
                 </div>
 
