--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="shotcut icon" href="../img/LOGO32x32.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta name="description" content="Contactame para animaciones webgl, tienda de productos diseños propios, joyas, ropa y cuadros meditativos">
+    <meta name="keywords" content="desarrollo web, carrera, coderhouse, trabajo, online, expertos, mejores, full stack, frontend, backend, developer, portafolio, curso, animacion, web, webgl, digital, cuadros, joyas, 3d, impresion 3d, tienda, personal, perla negra">
+
 
 
     <!-- para bloquear el f12 -->
