agregue componentes a la tienda, se arreglo zindex del parallax

--- a/pages/arte.html
+++ b/pages/arte.html
@@ -261,18 +261,15 @@
         <section class="row g-3 m-3  bg-dark text-light flex-S ">
 
 
-            <div class=" col-12 col-sm-6">
+            <div class=" col-12 col-sm-6 order-1 order-sm-0">
                 <iframe width="100%" height="590" src="https://www.instagram.com/p/CanDKOsuVee/embed" frameborder="0"></iframe>
             </div>
             <div class="col-12 col-sm-6 ">
-                <div class="iframesText instDirection">
+                <div class="iframesText instDirection order-0 order-sm-1">
                     <h1>INSTAGRAM</h1>
                     <p>
                         CONTENIDO EXCLUSIVO ESTUDIOS AUDIOVISUALES
                     </p>
-                    <!-- <div>
-                        <a href="https://www.youtube.com/user/MaxiCrows/videos" target="_blank">Ver Mas</a>
-                    </div> -->
 
                 </div>
 
