--- a/index.html
+++ b/index.html
@@ -62,30 +62,28 @@
             <div class="row flex-S ">
                 <div class="col-5 g-1">
                     <div id="menuhamburguesa">
-                        <ul class="d-flex justify-content-center menuCenter">
+                        <ul class="flex-S menuCenter">
                             <li>
                                 <div class="listamenu"><i class="bi bi-list instSize"></i>
                                 </div>
-                                <ul>
-                                    <li><a href="index.html">HOME</a></li>
-                                    <li><a href="./pages/arte.html">ARTE</a></li>
-                                    <li><a href="./pages/tienda.html">TIENDA</a></li>
-                                    <li><a href="./pages/bio.html">BIO</a></li>
-                                    <li><a href="./pages/contacto.html">CONTACTO</a></li>
+                                <ul id="menuAnimation">
+                                    <li style="--clr:#1535e7"><a href="index.html" data-text="&nbsp;HOME">&nbsp;HOME&nbsp;</a></li>
+                                    <li style="--clr:#fc0859"><a href="./pages/arte.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
+                                    <li style="--clr:#aa2aff"><a href="./pages/tienda.html" data-text="&nbsp;TIENDA">&nbsp;TIENDA&nbsp;</a></li>
+                                    <li style="--clr:#59c2ff"><a href="./pages/bio.html" data-text="&nbsp;BIO">&nbsp;BIO&nbsp;</a></li>
+                                    <li style="--clr:#B3D883"><a href="./pages/contacto.html" data-text="&nbsp;CONTACTO">&nbsp;CONTACTO&nbsp;</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
 
                     <div id="menu">
-                        <ul class="d-flex flex-wrap justify-content-around menuCenter">
-                            <li><a href="index.html">HOME</a>
-                            <li><a href="./pages/arte.html">ARTE</a></li>
-
-
-                            <li><a href="./pages/tienda.html">TIENDA</a></li>
-                            <li><a href="./pages/bio.html">BIO</a></li>
-                            <li><a href="./pages/contacto.html">CONTACTO</a></li>
+                        <ul class=" flex-wrap flex-S justify-content-around menuCenter " id="menuAnimation">
+                            <li style="--clr:#1535e7"><a href="index.html" data-text="&nbsp;HOME">&nbsp;HOME&nbsp;</a></li>
+                            <li style="--clr:#fc0859"><a href="./pages/arte.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
+                            <li style="--clr:#aa2aff"><a href="./pages/tienda.html" data-text="&nbsp;TIENDA">&nbsp;TIENDA&nbsp;</a></li>
+                            <li style="--clr:#59c2ff"><a href="./pages/bio.html" data-text="&nbsp;BIO">&nbsp;BIO&nbsp;</a></li>
+                            <li style="--clr:#B3D883"><a href="./pages/contacto.html" data-text="&nbsp;CONTACTO">&nbsp;CONTACTO&nbsp;</a></li>
                         </ul>
                     </div>
 
