--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -59,51 +59,50 @@
 
         <nav class="container-fluid navbarZ">
 
-            <div class="row align-items-center justify-content-center ">
+            <div class="row flex-S ">
                 <div class="col-5 g-1">
                     <div id="menuhamburguesa">
-                        <ul class="d-flex justify-content-center menuCenter">
+                        <ul class="flex-S menuCenter">
                             <li>
                                 <div class="listamenu"><i class="bi bi-list instSize"></i>
                                 </div>
-                                <ul>
-                                    <li><a href="../index.html">HOME</a></li>
-                                    <li><a href="arte.html">ARTE</a></li>
-                                    <li><a href="tienda.html">TIENDA</a></li>
-                                    <li><a href="bio.html">BIO</a></li>
-                                    <li><a href="contacto.html">CONTACTO</a></li>
+                                <ul id="menuAnimation">
+                                    <li style="--clr:#1535e7"><a href="../index.html" data-text="&nbsp;HOME">&nbsp;HOME&nbsp;</a></li>
+                                    <li style="--clr:#fc0859"><a href="arte.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
+                                    <li style="--clr:#aa2aff"><a href="tienda.html" data-text="&nbsp;TIENDA">&nbsp;TIENDA&nbsp;</a></li>
+                                    <li style="--clr:#59c2ff"><a href="bio.html" data-text="&nbsp;BIO">&nbsp;BIO&nbsp;</a></li>
+                                    <li style="--clr:#B3D883"><a href="contacto.html" data-text="&nbsp;CONTACTO">&nbsp;CONTACTO&nbsp;</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
 
                     <div id="menu">
-                        <ul class="d-flex flex-wrap justify-content-around menuCenter">
-                            <li><a href="../index.html">HOME</a>
-                            <li><a href="arte.html">ARTE</a></li>
-
-
-                            <li><a href="tienda.html">TIENDA</a></li>
-                            <li><a href="bio.html">BIO</a></li>
-                            <li><a href="contacto.html">CONTACTO</a></li>
+                        <ul class=" flex-wrap flex-S justify-content-around menuCenter " id="menuAnimation">
+                            <li style="--clr:#1535e7"><a href="../index.html" data-text="&nbsp;HOME">&nbsp;HOME&nbsp;</a></li>
+                            <li style="--clr:#fc0859"><a href="arte.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
+                            <li style="--clr:#aa2aff"><a href="tienda.html" data-text="&nbsp;TIENDA">&nbsp;TIENDA&nbsp;</a></li>
+                            <li style="--clr:#59c2ff"><a href="bio.html" data-text="&nbsp;BIO">&nbsp;BIO&nbsp;</a></li>
+                            <li style="--clr:#B3D883"><a href="contacto.html" data-text="&nbsp;CONTACTO">&nbsp;CONTACTO&nbsp;</a></li>
                         </ul>
                     </div>
 
                 </div>
                 <div class="col-2 d-flex flex-wrap justify-content-center">
                     <div class="mixing7">
-                        <img src="../img/zetaalphalogo2.png" height="100" width="100" alt="logo">
+                        <img src="../img/zetaalphalogo2.png" height="100" width="100" alt="logo de zeta">
                     </div>
                 </div>
 
                 <div class="col-5 d-flex flex-wrap justify-content-center">
                     <div id="register">
-                        <i class="bi bi-person-circle loginPerfil "></i>
+                        <i class="bi bi-person-circle loginPerfil"></i>
                         <a href="#">LOGIN</a>
                     </div>
                 </div>
 
             </div>
+
 
         </nav>
 
