--- a/index.html
+++ b/index.html
@@ -22,41 +22,11 @@
     <meta name="keywords"
         content="desarrollo web, carrera, coderhouse, trabajo, online, expertos, mejores, full stack, frontend, backend, developer, portafolio, curso, animacion, web, webgl, digital, cuadros, joyas, 3d, impresion 3d, tienda, personal, perla negra">
 
-    <!-- para bloquear el f12 -->
-    <!-- <script>
-
-        document.onkeydown = function (e) {
-            if (event.keyCode == 123) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'I'.charCodeAt(0) || e.keyCode == 'i'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'C'.charCodeAt(0) || e.keyCode == 'c'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'J'.charCodeAt(0) || e.keyCode == 'j'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && (e.keyCode == 'U'.charCodeAt(0) || e.keyCode == 'u'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && (e.keyCode == 'S'.charCodeAt(0) || e.keyCode == 's'.charCodeAt(0))) {
-                return false;
-            }
-        }
-    </script> -->
-
 
 </head>
 
 <body class="bg-dark">
-    <!-- para bloqeuar click derecho -->
-    <!-- <body oncontextmenu="return false;"></body> -->
-
-
     <header>
-
         <nav class="container-fluid navbarZ">
 
             <div class="row flex-S ">
@@ -67,7 +37,7 @@
                                 <div class="listamenu"><i class="bi bi-list instSize"></i>
                                 </div>
                                 <ul id="menuAnimation">
-                                    <li style="--clr:#1535e7"><a href="index.html" data-text="&nbsp;HOME">&nbsp;HOME&nbsp;</a></li>
+                                    <li style="--clr:#1535e7"><a href="index.html" data-text="&nbsp;HOMEro">&nbsp;HOME&nbsp;</a></li>
                                     <li style="--clr:#fc0859"><a href="./pages/arte.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
                                     <li style="--clr:#aa2aff"><a href="./pages/tienda.html" data-text="&nbsp;TIENDA">&nbsp;TIENDA&nbsp;</a></li>
                                     <li style="--clr:#59c2ff"><a href="./pages/bio.html" data-text="&nbsp;BIO">&nbsp;BIO&nbsp;</a></li>
@@ -116,9 +86,11 @@
             <section class="banner ">
                 <div class="containerParallax">
                     <div id="scene">
+                                
+                           <div class="layer iFrame2" data-depth="0.9">
+                                    <iframe src="indexcables2.html" class="iFrame"></iframe>
+                              </div>
 
-                        <div class="layer" data-depth="0.1
-                    "><img src="./img/hellomundo.jpg" alt=""></div>
                         <div class="layer" data-depth="0.6"><img src="./img/marco1-min.png" alt=""></div>
                         <div class="layer" data-depth="0.7"><img src="./img/marco2-min.png" alt=""></div>
                         <div class="layer" data-depth="0.8"><img src="./img/marco3-min.png" alt=""></div>
@@ -140,8 +112,8 @@
 
 
         <section class="row g-0 bg-light flex-S ">
-            <div class="col-12 col-sm-6 artePadding">
-                <div class="arteZ">
+            <div class="col-12 col-sm-6 ">
+                <div class="arteZ ">
                     <h1>ARTE</h1>
                     <p>
                         A traves de la programacion encuentro plasmar las visiones e ideas
@@ -179,11 +151,11 @@
 
 
             <div class=" card-group">
-                <div class="col-12 col-sm-4 card mixing5" data-aos="fade-right">
+                <div class="col-12 col-sm-4 card mixing5 text-center" data-aos="fade-right">
                     <img class="card-img-top" src="./img/kalei1.gif" alt="Card image cap">
                     <div class="card-body ">
                         <h5 class="card-title">CUADROS</h5>
-                        <p class="card-text">Creados para la relajacion y alteracion de la consciencia</p>
+                        <p class="card-text">Relajacion y </p>
                     </div>
                     <div class="card-footer">
                         <a href="./pages/tienda.html#cuadros">Ver Mas</a>
@@ -197,13 +169,13 @@
                     <p>Explora todos los productos</p>
                 </div>
 
-                <div class="col-12 col-sm-4 card mixing6" data-aos="fade-right">
+                <div class="col-12 col-sm-4 card mixing6 text-center" data-aos="fade-right">
                     <img class="card-img-top" src="./img/joya1.jpg" alt="Card image cap">
-                    <div class="card-body ">
-                        <h5 class="card-title">JOYAS</h5>
+                    <div class="card-body   ">
+                        <h5 class="card-title ">JOYAS</h5>
                         <p class="card-text">Diseños de Autor</p>
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer  ">
                         <a href="./pages/tienda.html#joyas">Ver Mas</a>
                     </div>
                 </div>
@@ -224,10 +196,10 @@
 
         <section class="bg-light">
 
-            <div class="col">
+            <div class="col flex-S">
                 <div class="contactoZ arteZ">
                     <h2>CONTACTO</h2>
-                    <p>Para diseños personalizados pueden comunicarse via</p>
+                    <p>Para consultas aqui</p>
                     <i class="bi bi-envelope instSize"></i>
 
                     <p>massi.laplata@gmail.com</p>
