--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -113,14 +113,14 @@
 
     <main class="container px-lg-4 px-md-3 px-0">
 
-        <section>
+        <section class="bg-light">
 
-            <div class="col bg-light">
+            <div class="col flex-S">
                 <div class="contactoZ arteZ">
                     <h2>CONTACTO</h2>
-                    <p>Para diseños personalizados pueden comunicarse via</p>
+                    <p>Consultas aqui</p>
                     <i class="bi bi-envelope instSize"></i>
-                    
+
                     <p>massi.laplata@gmail.com</p>
                     <a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram instSize"></i></a>
                     <p>@zetaintrip</p>
