--- a/pages/arte2.html
+++ b/pages/arte2.html
@@ -151,10 +151,10 @@
         </section>
 
         <section>
-            <div class="bg-dark animacionText text-light">
+            <div class="bg-dark animacionText text-light m-4">
                 <h1>ANIMACIONES WEB</h1>
             </div>
-            <div class="row m-3">
+            <div class="row m-3 ">
                 <div class=" col-12 col-sm-6">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         <img class="w-100 mb-4 rounded mixing1 " data-aos="fade-up" src="../img/spiral2.png" alt="">
